Changes since 1.2 (all Changes from 1.2 to 1.2.5 at the time of 1.3.3.4 release are included in the 1.3.3.5 Version too)


Scribus - 1.3.3.5cvs
====================
- 0003651: [Internal] default text colors for new paragraph style drawn from wrong place (cbradney)
- 0004488: [User Interface] Printer options dialog is only a tiny spot (fschmid)
- 0004408: [Printing] printing via kprinter fails (fschmid)
- 0004483: [PDF] The PDF Producer tidy (fschmid)
- 0002976: [Import / Export] Can't change number-field format in PDF Web Form (fschmid)
- 0004391: [Win32] acrobat 5 responds with javascript errors upon opening file (fschmid)
- 0004482: [Translation] Updated Danish Translation (cbradney)
- 0004469: [PDF] Exporting this file to PDF gives error in AdobeReader 7.x (fschmid)
- 0004218: [PDF] Period '.' should not allowed in AcroForm field names? (fschmid)
- 0002174: [Story Editor / Text Frames] select all for text frame selects only visible lines (avox)
- 0003749: [Story Editor / Text Frames] Document setup doesn't remember "hyphenation suggestions" setting (cbradney)
- 0004480: [Translation] updated Russian translation for 1.3.3.5 (cbradney)
- 0003182: [Story Editor / Text Frames] Text alignment buttons in the properties palette don't work as expected (plinnell)
- 0004477: [Translation] Polish translation update for 1.3.3.5 (cbradney)
- 0003650: [Internal] incorrect list entry in preferences:shape drawing tools (cbradney)
- 0004226: [User Interface] Wrong/confusing text string in Story Editor dialog (subik)
- 0004472: [Translation] Translation Update - pt_BR (plinnell)
- 0004471: [Translation] Greek translation po file corrections (plinnell)
- 0004470: [Translation] Ukrainian translation update for the upcoming 1.3.3.5 release (plinnell)
- 0003078: [Story Editor / Text Frames] Scribus crashes after applying changes from story editor (fschmid)
- 0002987: [Internal] SIG 11 (fschmid)
- 0003443: [General] Scrapbook eps don't undo correctly (Tsoots)