@@ -1,6 +1,6 @@
 SUBDIRS = tutorials images
 
-EXTRA_DIST = about1.html about2.html cms.html cms2.html cms3.html cms4.html codingstandards.html contributions.html cross-platform.html cups.html  developers.html  doccopyright.html docinfo.html download.html faq1.html faq2.html faq3.html fonts1.html fonts2.html fonts3.html fonts4.html fonts5.html fonts-win32.html gettexthowto.html gsfont.html  hyphenator.html importhints1.html importhints2.html importhints.html importhints3.html  importhints4.html index.html install1.html install2.html install3.html install.html install-dpkg.html intro.html irc.html javascriptpdf.html keys.html machints1.html machints2.html menu.xml moncal.html mouse.html pagetemplate1.html parallel-install.html pdflavor.html pdfexport1.html pdfexport2.html pdfexport3.html pdfexport4.html pdfx3.html pdf_form.html plugin_howto.html prepress.html print1.html print2.html print3.html  readme.html readme-win32.html resources.html scprinters.html scribuscopyright.html scribusfileformat.html scribus-svg.html scripter1.html scripter-extensions.html scripterapi-color.html scripterapi-constants.html scripterapi-dialogs.html scripterapi-doc.html scripterapi-font.html scripterapi-getobjprop.html scripterapi.html scripterapi-layer.html scripterapi-manobj.html scripterapi-object.html scripterapi-page.html scripterapi-select.html scripterapi-setobjprop.html scripterapi-textframes.html scripter-faq.html scripterapi-pydoc.html scripterapi-PDFfile.html scripterapi-Printer.html scripterapi-ImageExport.html settings1.html specs.html  short-words.html toolbox10.html toolbox11.html toolbox12.html toolbox13.html toolbox1.html toolbox2.html toolbox3.html toolbox4.html toolbox5.html toolbox6.html toolbox7.html toolbox8.html toolbox9.html toolbox.html topten.html translation_howto.html  otherinfo.html documentation.html tutorials.html
+EXTRA_DIST = about1.html about2.html cms.html cms2.html cms3.html cms4.html codingstandards.html contributions.html cross-platform.html cups.html  developers.html  doccopyright.html docinfo.html download.html faq1.html faq2.html faq3.html fonts1.html fonts2.html fonts3.html fonts4.html fonts5.html fonts-win32.html gettexthowto.html gsfont.html  hyphenator.html importhints1.html importhints2.html importhints.html importhints3.html  importhints4.html index.html install1.html install2.html install3.html install.html install-dpkg.html intro.html irc.html javascriptpdf.html keys.html machints1.html machints2.html menu.xml moncal.html mouse.html pagetemplate1.html parallel-install.html pdflavor.html pdfexport1.html pdfexport2.html pdfexport3.html pdfexport4.html pdfx3.html pdf_form.html plugin_howto.html prepress.html print1.html print2.html print3.html psd.html readme.html readme-win32.html resources.html scprinters.html scribuscopyright.html scribusfileformat.html scribus-svg.html scripter1.html scripter-extensions.html scripterapi-color.html scripterapi-constants.html scripterapi-dialogs.html scripterapi-doc.html scripterapi-font.html scripterapi-getobjprop.html scripterapi.html scripterapi-layer.html scripterapi-manobj.html scripterapi-object.html scripterapi-page.html scripterapi-select.html scripterapi-setobjprop.html scripterapi-textframes.html scripter-faq.html scripterapi-pydoc.html scripterapi-PDFfile.html scripterapi-Printer.html scripterapi-ImageExport.html settings1.html specs.html  short-words.html toolbox10.html toolbox11.html toolbox12.html toolbox13.html toolbox1.html toolbox2.html toolbox3.html toolbox4.html toolbox5.html toolbox6.html toolbox7.html toolbox8.html toolbox9.html toolbox.html topten.html translation_howto.html  otherinfo.html documentation.html tutorials.html
 
 install-data-local:
 	$(mkinstalldirs) $(prefix)/share/doc/scribus-$(VERSION)/en/
@@ -64,6 +64,7 @@ install-data-local:
 	$(INSTALL_DATA) $(srcdir)/print1.html $(prefix)/share/doc/scribus-$(VERSION)/en/print1.html
 	$(INSTALL_DATA) $(srcdir)/print2.html $(prefix)/share/doc/scribus-$(VERSION)/en/print2.html
 	$(INSTALL_DATA) $(srcdir)/print3.html $(prefix)/share/doc/scribus-$(VERSION)/en/print3.html
+	$(INSTALL_DATA) $(srcdir)/psd.html $(prefix)/share/doc/scribus-$(VERSION)/en/psd.html
 	$(INSTALL_DATA) $(srcdir)/readme.html $(prefix)/share/doc/scribus-$(VERSION)/en/readme.html
 	$(INSTALL_DATA) $(srcdir)/readme-win32.html $(prefix)/share/doc/scribus-$(VERSION)/en/readme-win32.html
 	$(INSTALL_DATA) $(srcdir)/resources.html $(prefix)/share/doc/scribus-$(VERSION)/en/resources.html
@@ -176,6 +177,7 @@ uninstall-local:
 	-rm -f $(prefix)/share/doc/scribus-$(VERSION)/en/print1.html
 	-rm -f $(prefix)/share/doc/scribus-$(VERSION)/en/print2.html
 	-rm -f $(prefix)/share/doc/scribus-$(VERSION)/en/print3.html
+	-rm -f $(prefix)/share/doc/scribus-$(VERSION)/en/psd.html
 	-rm -f $(prefix)/share/doc/scribus-$(VERSION)/en/readme.html
 	-rm -f $(prefix)/share/doc/scribus-$(VERSION)/en/readme-win32.html
 	-rm -f $(prefix)/share/doc/scribus-$(VERSION)/en/resources.html
