@@ -23,6 +23,7 @@
 <div class="item">
 <h3>Brief Project Status</h3>
 <ul>
+<li><b>09/11/2006</b> - Scribus 1.3.3.5 (devel)  released</li>
 <li><b>03/10/2006</b> - Scribus 1.3.3.4 (devel)  released</li>			
 <li><b>07/08/2006</b> - Scribus 1.3.3.3 (devel)  released</li>
 <li><b>29/05/2006</b> - Scribus 1.3.3.2 (devel)  released</li>
