@@ -1,8 +1,8 @@
 <qt>
-<title>Scribus Version 1.3.3.4 Readme</title>
-<h2>Scribus Version 1.3.3.4 Readme</h2>
+<title>Scribus Version 1.3.3.5 Readme</title>
+<h2>Scribus Version 1.3.3.5 Readme</h2>
 <h4>What's New ?</h4>
-<p>The Scribus 1.3.3.4 is the seventh development release of the next generation for Scribus. While it is fairly stable, there are a number of under the hood changes which are on-going. This is the second version of Scribus released as a native win32 application. </p>
+<p>The Scribus 1.3.3.5 is the ninth development release of the next generation for Scribus. While it is fairly stable, there are a number of under the hood changes which are on-going. This is the second version of Scribus released as a native win32 application. </p>
 <h4>The file format has changed and is NOT backwardly compatible. You have been warned. We have specifically disabled the ability to open 1.3.x files in the stable 1.2.x versions. Our plans for a new file format should be settled in the 1.3.4 -1.3.5 development period.</h4>
 <ol>
 <li>Windows users are <strong>strongly encouraged</strong> to install the latest  <a href="http://ghostscript.com">Ghostscript</a> <strong>before</strong> installing Scribus. This greatly simplifies setting up EPS importing. Ghostscript is a mature PostScript interpreter and is essential for EPS import into Scribus.</li>
@@ -25,12 +25,29 @@
 <p>To use Scribus in your native language be sure that the environment variable LC_ALL, LC_MESSAGES, LANG, Qt locale, OR the command line option of -l/--lang &#060;lang&#062; is set correctly. This also can be changed in the preferences and takes effect immediately.</p>
 
 <p>The EPS/PS import features in 1.3.x uses advanced features of Ghostscript. We recommend ALL users update to the newest version of Ghostscript available for your distribution. There are detailed hints on docs.scribus.net for installing GS 8.x in parallel to the GS installed by your distribution.</p>
-	
+
+<p>The current importer will now import raster images within an EPS file provided you have at
+least GS 8.15, with the current limitations:</p><ul>
+   <li>imagemask doesn't work correctly  </li>
+   <li>clip path is ignored  </li>
+   <li>creates one file for each bitmap, which can be a lot   </li>
+ </ul>
+
+<h4>PSD/CMYK TIFF Support</h4>
+
+<p>1.3.3+ now has support for CMYK PSD and 8-bit CMYK TIFF support. RGB PSD and
+16-bit TIFF support is being developed. PSD and TIFF support includes layers, ICC 
+profiles and embedding clipping paths. CMYKA is not yet supported as there is a 
+limitation in the Qimage class. RGBA is supported. Current Scribus 1.3.4cvs does 
+handle a much larger variety of CMYKA files along with advanced PSD features.</p>
+
 <p>Activating Color Management <strong>requires</strong> installation of CMYK and RGB ICC profiles. Grey scale icc profiles in images are not supported in this release. Scribus comes with 2 icc profiles only to ensure color management works immediately. These profiles are not sufficient to provide correctly working color management. Please see the included help files and <a href="http://docs.scribus.net">http://docs.scribus.net</a> for details.</p>
 <p>If you have a 64-bit version of Qt, sometimes ./configure will not detect the 64-bit version headers. Try : <pre>./configure --enable-libsuffix=64</pre> to test for 64-bit versions of libraries.</p>
 <h4>Other notes/known issues at the time of release:</h4>
 	
 <p>There is a bug in font outline handling for some fonts in the freetype libraries. It's being worked on upstream. Don't file a bug report. Instead change the font used if you need the outlines. This is not a Scribus bug. Some testing has shown that this bug is not present in freetype 2.1.10+, but we counsel caution trying to upgrade freetype2. Upgrading freetype2 on some distributions can be quite difficult.</p>
+
+
 	
 <h4>Issue with gradients:</h4>
 	
@@ -63,6 +80,6 @@ list and/IRC. We *know* the Cairo enabled build is slower, but are encouraged
 <p>There is a lively on-line community, both on IRC @ #scribus on irc.freenode.net and the mailing list. Mailing list info can be found at: http://nashi.altmuehlnet.de/mailman/listinfo/scribus</p>
 <p>For the Scribus Team,</p>
 <p>Peter Linnell<br />
-in October 2006<br />
+in November 2006<br />
 </p>
 </qt>
