@@ -3,6 +3,8 @@ Changes since 1.2 (all Changes from 1.2 to 1.2.5 at the time of 1.3.3.4 release 
 
 Scribus - 1.3.3.5cvs
 ====================
+- 0004439: [Releases] 1.3.3.5 Release Metabug (plinnell)
+- 0004495: [Story Editor / Text Frames] automatic linespacing mode broken? (fschmid)
 - 0003651: [Internal] default text colors for new paragraph style drawn from wrong place (cbradney)
 - 0004488: [User Interface] Printer options dialog is only a tiny spot (fschmid)
 - 0004408: [Printing] printing via kprinter fails (fschmid)
